<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#92dd22">


    <Button
        android:id="@+id/button1"
        style="@style/AppTheme"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="73dp"
        android:layout_toLeftOf="@+id/button2"
        android:background="@drawable/myborder"
        android:text="@string/led1" />


    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/myborder"
        android:text="@string/led2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:background="@drawable/myborder"
        android:text="@string/led3" />


    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="#92dd22" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/textsize1" />


    <SeekBar
        android:id="@+id/LED4rate_Bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="39dp" />


    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LED4rate_Bar"
        android:layout_centerHorizontal="true"
        android:text="@string/EnableKey" />

</RelativeLayout>
